# jepa

./: .gitignore  BACKLOG.md  CLAUDE.md  JEPA.md  README.md  ShinkaEvolve.md  other_world_models.md  terminal-jepa-status.md  terminal-jepa.md
terminal-jepa/: CLAUDE.md  README.md  pyproject.toml
terminal-jepa/benchmarks/: axis1_measure.py  bench-constitution.md  class_measure.py  dockerfs2-digests.json  dockerfs2-prereg.md  dockerfs3-P3-class-report.md  dockerfs3-classes.json  dockerfs3-design-draft.md  dockerfs3-digests.json  dockerfs3-prereg.md  dockerfs3-runbook.md  mint-runbook.md  plan-probe-v1-prereg.md  plan-probe-v1-stage2-prereg.md  r10-calibration-prereg.md  r11-planning-prereg.md  scan_publish.py
terminal-jepa/cloud/: README.md  runpod.sh  runpod_score.sh
terminal-jepa/datagen/: generate.py  layouts.py  policies.py
terminal-jepa/env/: __init__.py  actions.py  parse.py  render.py  state.py  vocab.py  world.py
terminal-jepa/evals/: dynamics.py
terminal-jepa/evolve/: CLAUDE.md  DESIGN.md  archive.py  bench.py  bench_versions.py  calib_bench.py  cli.py  genome.py  harness.py  inventors.py  mv_encode.py  path_battery.py  precompute_baselines.py  reencode.py  sanity.py  splits.py
terminal-jepa/models/: data.py  gate2.py  losses.py  nets.py  tier2.py
terminal-jepa/plan/: cem.py
terminal-jepa/probes/: frozen_probe.py  idm_readout.py  predictor_baseline.py  probe.py  target_noise.py
terminal-jepa/realenv/: collect.py  collect_docker.py  docker_env.py  jepa_vs_gen.py  plan_env.py  plan_eval.py  probe_outcomes.py  record.py  render_canon.py  tasks.py  (+4 more)
(+306 files in other folders)
